tests/baselines/reference/noImplicitAnyParametersInAmbientClass.errors.txt
noImplicitAnyParametersInAmbientClass.ts(6,19): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(12,19): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(12,22): error TS7006: Parameter 'y' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(12,25): error TS7006: Parameter 'z' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(15,19): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(15,30): error TS7006: Parameter 'z' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(18,19): error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
noImplicitAnyParametersInAmbientClass.ts(21,19): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(21,22): error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
noImplicitAnyParametersInAmbientClass.ts(24,19): error TS7006: Parameter 'x1' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(25,31): error TS7006: Parameter 'y2' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(26,19): error TS7006: Parameter 'x3' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(26,23): error TS7006: Parameter 'y3' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(32,22): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(35,22): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(35,25): error TS7006: Parameter 'y' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(35,28): error TS7006: Parameter 'z' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(38,22): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(38,33): error TS7006: Parameter 'z' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(41,22): error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
noImplicitAnyParametersInAmbientClass.ts(44,22): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(44,25): error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
noImplicitAnyParametersInAmbientClass.ts(78,24): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(81,24): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(81,27): error TS7006: Parameter 'y' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(81,30): error TS7006: Parameter 'z' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(84,24): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(84,35): error TS7006: Parameter 'z' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(87,24): error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
noImplicitAnyParametersInAmbientClass.ts(90,24): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInAmbientClass.ts(90,27): error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.


==== noImplicitAnyParametersInAmbientClass.ts (31 errors) ====
    declare class D_C {
        // No implicit-'any' errors.
        public pub_f1(): void;
    
        // Implicit-'any' errors for x.
        public pub_f2(x): void;
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        public pub_f3(x: any): void;
    
        // Implicit-'any' errors for x, y, and z.
        public pub_f4(x, y, z): void;
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                         ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
                            ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // Implicit-'any' errors for x, and z.
        public pub_f5(x, y: any, z): void;
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                                 ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // Implicit-'any[]' errors for r.
        public pub_f6(...r): void;
                      ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        // Implicit-'any'/'any[]' errors for x, r.
        public pub_f7(x, ...r): void;
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                         ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        // Implicit-'any' errors for x1, y2, x3, and y3.
        public pub_f8(x1, y1: number): any;
                      ~~
!!! error TS7006: Parameter 'x1' implicitly has an 'any' type.
        public pub_f8(x2: string, y2): any;
                                  ~~
!!! error TS7006: Parameter 'y2' implicitly has an 'any' type.
        public pub_f8(x3, y3): any;
                      ~~
!!! error TS7006: Parameter 'x3' implicitly has an 'any' type.
                          ~~
!!! error TS7006: Parameter 'y3' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        public pub_f9: () => string;
    
        // Implicit-'any' error for x.
        public pub_f10: (x) => string;
                         ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
        // Implicit-'any' errors for x, y, and z.
        public pub_f11: (x, y, z) => string;
                         ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                            ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
                               ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // Implicit-'any' errors for x and z.
        public pub_f12: (x, y: any, z) => string;
                         ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                                    ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // Implicit-'any[]' error for r.
        public pub_f13: (...r) => string;
                         ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        // Implicit-'any'/'any[]' errors for x, r.
        public pub_f14: (x, ...r) => string;
                         ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                            ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        ///////////////////////////////////////////
    
        // No implicit-'any' errors.
        private priv_f1(): void;
    
        // No implicit-'any' errors.
        private priv_f2(x): void;
    
        // No implicit-'any' errors.
        private priv_f3(x: any): void;
    
        // No implicit-'any' errors.
        private priv_f4(x, y, z): void;
    
        // No implicit-'any' errors.
        private priv_f5(x, y: any, z): void;
    
        // No implicit-'any' errors.
        private priv_f6(...r): void;
    
        // No implicit-'any' errors.
        private priv_f7(x, ...r): void;
    
        // No implicit-'any' errors.
        private priv_f8(x1, y1: number): any;
        private priv_f8(x2: string, y2): any;
        private priv_f8(x3, y3): any;
    
        // No implicit-'any' errors.
        private priv_f9: () => string;
    
        // Implicit-'any' error for x.
        private priv_f10: (x) => string;
                           ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
        // Implicit-'any' errors for x, y, and z.
        private priv_f11: (x, y, z) => string;
                           ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                              ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
                                 ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // Implicit-'any' errors for x and z.
        private priv_f12: (x, y: any, z) => string;
                           ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                                      ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // Implicit-'any[]' error for r.
        private priv_f13: (...r) => string;
                           ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        // Implicit-'any'/'any[]' errors for x, r.
        private priv_f14: (x, ...r) => string;
                           ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                              ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    }